application/k8s/app-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: green
  template:
    metadata:
      labels:
        app: myapp
        version: green
    spec:
      containers:
        - name: app
          image: acrdevprashant123.azurecr.io/aks-app:v2
          ports:
            - containerPort: 3000
