application/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  selector:
    app: myapp
    version: blue   #  TRAFFIC HERE
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
